# malt_asset

./: CMakeLists.txt  malt_asset-config.cmake  module.json  readme.md
include/malt_asset/: asset_loader.hpp  asset_mgr.hpp  assets.hpp  assets_def.hpp  module.hpp  text_asset.hpp
src/: assets.cpp  module.cpp  text_asset.cpp
